@@ -17,6 +17,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -75,6 +76,10 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
     DataImportIssueStore.NOOP
   );
 
+  private final List<PlaceType> DEFAULT_PLACE_TYPES = List.copyOf(
+    EnumSet.complementOf(EnumSet.of(PlaceType.STATION))
+  );
+
   @Override
   public DataFetcher<Iterable<Agency>> agencies() {
     return environment -> getTransitService(environment).getAgencies();
@@ -126,7 +131,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         .<GraphQLRequestContext>getContext()
         .vehicleParkingService();
 
-      return vehicleParkingService.getBikeParks().collect(Collectors.toList());
+      return vehicleParkingService.getBikeParks().toList();
     };
   }
 
@@ -176,7 +181,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalStations.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       return vehicleRentalStationService.getVehicleRentalPlaces();
@@ -223,11 +228,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             .getCarParks()
             .collect(Collectors.toMap(station -> station.getId().getId(), station -> station));
 
-          return idList.stream().map(carParkMap::get).collect(Collectors.toList());
+          return idList.stream().map(carParkMap::get).toList();
         }
       }
 
-      return vehicleParkingService.getCarParks().collect(Collectors.toList());
+      return vehicleParkingService.getCarParks().toList();
     };
   }
 
@@ -276,6 +281,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
   public DataFetcher<Connection<PlaceAtDistance>> nearest() {
     return environment -> {
       List<FeedScopedId> filterByStops = null;
+      List<FeedScopedId> filterByStations = null;
       List<FeedScopedId> filterByRoutes = null;
       List<String> filterByBikeRentalStations = null;
       // TODO implement
@@ -291,19 +297,15 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
       if (filterByIds != null) {
         filterByStops =
           filterByIds.getGraphQLStops() != null
-            ? filterByIds
-              .getGraphQLStops()
-              .stream()
-              .map(FeedScopedId::parse)
-              .collect(Collectors.toList())
+            ? filterByIds.getGraphQLStops().stream().map(FeedScopedId::parse).toList()
+            : null;
+        filterByStations =
+          filterByIds.getGraphQLStations() != null
+            ? filterByIds.getGraphQLStations().stream().map(FeedScopedId::parse).toList()
             : null;
         filterByRoutes =
           filterByIds.getGraphQLRoutes() != null
-            ? filterByIds
-              .getGraphQLRoutes()
-              .stream()
-              .map(FeedScopedId::parse)
-              .collect(Collectors.toList())
+            ? filterByIds.getGraphQLRoutes().stream().map(FeedScopedId::parse).toList()
             : null;
         filterByBikeRentalStations = filterByIds.getGraphQLBikeRentalStations();
         filterByBikeParks = filterByIds.getGraphQLBikeParks();
@@ -322,11 +324,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             }
           })
           .filter(Objects::nonNull)
-          .collect(Collectors.toList())
+          .toList()
         : null;
       List<PlaceType> filterByPlaceTypes = args.getGraphQLFilterByPlaceTypes() != null
         ? args.getGraphQLFilterByPlaceTypes().stream().map(GraphQLUtils::toModel).toList()
-        : null;
+        : DEFAULT_PLACE_TYPES;
 
       List<PlaceAtDistance> places;
       try {
@@ -341,6 +343,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
                 filterByModes,
                 filterByPlaceTypes,
                 filterByStops,
+                filterByStations,
                 filterByRoutes,
                 filterByBikeRentalStations,
                 getTransitService(environment)
@@ -360,7 +363,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
       var args = new GraphQLTypes.GraphQLQueryTypeNodeArgs(environment.getArguments());
       String type = args.getGraphQLId().getType();
       String id = args.getGraphQLId().getId();
-      final GraphQLRequestContext context = environment.<GraphQLRequestContext>getContext();
+      final GraphQLRequestContext context = environment.getContext();
       TransitService transitService = context.transitService();
       VehicleParkingService vehicleParkingService = context.vehicleParkingService();
       VehicleRentalService vehicleRentalStationService = context.vehicleRentalService();
@@ -531,7 +534,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalVehicles.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       var formFactorArgs = args.getGraphQLFormFactors();
@@ -574,7 +577,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .stream()
           .map(FeedScopedId::parse)
           .map(transitService::getRouteForId)
-          .collect(Collectors.toList());
+          .toList();
       }
 
       Stream<Route> routeStream = transitService.getAllRoutes().stream();
@@ -589,7 +592,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLTransportModes()
           .stream()
           .map(mode -> TransitMode.valueOf(mode.name()))
-          .collect(Collectors.toList());
+          .toList();
         routeStream = routeStream.filter(route -> modes.contains(route.getMode()));
       }
 
@@ -601,7 +604,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             GraphQLUtils.startsWith(route.getLongName(), name, environment.getLocale())
           );
       }
-      return routeStream.collect(Collectors.toList());
+      return routeStream.toList();
     };
   }
 
@@ -706,7 +709,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
       );
 
       Stream<RegularStop> stopStream = getTransitService(environment)
-        .findRegularStop(envelope)
+        .findRegularStops(envelope)
         .stream()
         .filter(stop -> envelope.contains(stop.getCoordinate().asJtsCoordinate()));
 
@@ -784,7 +787,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         tripStream = tripStream.filter(trip -> feeds.contains(trip.getId().getFeedId()));
       }
 
-      return tripStream.collect(Collectors.toList());
+      return tripStream.toList();
     };
   }
 
@@ -823,11 +826,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             .getVehicleParkings()
             .collect(Collectors.toMap(station -> station.getId().toString(), station -> station));
 
-          return idList.stream().map(vehicleParkingMap::get).collect(Collectors.toList());
+          return idList.stream().map(vehicleParkingMap::get).toList();
         }
       }
 
-      return vehicleParkingService.getVehicleParkings().collect(Collectors.toList());
+      return vehicleParkingService.getVehicleParkings().toList();
     };
   }
 
@@ -884,7 +887,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalStations.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       return vehicleRentalStationService.getVehicleRentalStations();
@@ -965,6 +968,6 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .map(EntitySelector.Stop.class::cast)
           .anyMatch(stop -> args.getGraphQLStop().contains(stop.stopId().toString()))
       )
-      .collect(Collectors.toList());
+      .toList();
   }
 }
